# PADT_Lab4

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/adt/: CMakeLists.txt  ring_buffer.hpp
include/adt_lab_2/: CMakeLists.txt  array_sequence.hpp  array_sequence.tpp  dynamic_array.hpp  dynamic_array.tpp  ienumerable.hpp  linked_list.hpp  linked_list.tpp  list_sequence.hpp  list_sequence.tpp  sequence.hpp
include/core/: CMakeLists.txt  ordinal.hpp
include/generators/: CMakeLists.txt  empty_generator.hpp  function_generator.hpp  generator.hpp  recurrence_generator.hpp  sequence_generator.hpp  single_element_generator.hpp  singleton_generator.hpp
include/lazy_sequence/: CMakeLists.txt  lazy_sequence.hpp  lazy_sequence.tpp
include/nodes/: CMakeLists.txt  append_node.hpp  concat_node.hpp  insert_at_node.hpp  node.hpp  prepend_node.hpp  remove_at_node.hpp  set_node.hpp  source_node.hpp  subsequence_node.hpp
include/smart_data/: CMakeLists.txt  distribution.hpp  normal_distribution.hpp  smart_data_config.hpp  smart_data_generator.hpp  uniform_distribution.hpp
include/streams/: CMakeLists.txt  input_stream.hpp  lazy_sequence_input_stream.hpp  lazy_sequence_output_stream.hpp  output_stream.hpp  sequence_input_stream.hpp  sequence_output_stream.hpp
include/ui/: CMakeLists.txt  console_io.hpp  console_ui.hpp  generator_presets.hpp
include/utils/: CMakeLists.txt  generator_functions.hpp
src/: CMakeLists.txt  append_node.hpp  concat_node.hpp  empty_generator.hpp  function_generator.hpp  generator.hpp  insert_at_node.hpp  lazy_sequence.hpp  lazy_sequence.tpp  main.cpp  node.hpp  ordinal.hpp  prepend_node.hpp  recurrence_generator.hpp  remove_at_node.hpp  ring_buffer.hpp  sequence_generator.hpp  set_node.hpp  singleton_generator.hpp  source_node.hpp  subsequence_node.hpp
src/console/: console_io.hpp  console_ui.cpp  console_ui.hpp  ui_records.hpp
src/lab_2/: array_sequence.hpp  dynamic_array.hpp  ienumerator.hpp  list_sequence.hpp  option.hpp  sequence.tpp
tests/: CMakeLists.txt  test_append_node.cpp  test_concat_node.cpp  test_empty_generator.cpp  test_function_generator.cpp  test_insert_at_node.cpp  test_ordinal.cpp  test_prepend_node.cpp  test_recurrence_generator.cpp  test_remove_at_node.cpp  test_ring_buffer.cpp  test_sequence_generator.cpp  test_set_node.cpp  test_singleton_generator.cpp  test_source_node.cpp  test_subsequence_node.cpp
tests/adt/: CMakeLists.txt  test_ring_buffer.cpp
tests/core/: CMakeLists.txt  test_ordinal.cpp
tests/generators/: CMakeLists.txt  test_empty_generator.cpp  test_function_generator.cpp  test_recurrence_generator.cpp  (+3 more)
(+20 files in other folders)
